--- a/package.json
+++ b/package.json
@@ -68,6 +68,9 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns":[
+      "/src/main.ts"
+    ]
   }
 }
