--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "allowJs": true,
+    "esModuleInterop": true,
     "resolveJsonModule": true,
     "paths": {
       "@/*": ["./src/*"]
