--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.js"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
@@ -33,11 +34,15 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "handlebars": "^4.7.8",
     "helmet": "^7.1.0",
+    "multer": "^1.4.5-lts.1",
     "nest-winston": "^1.9.4",
     "nestjs-i18n": "^10.4.0",
     "nestjs-typeorm-paginate": "^4.0.4",
+    "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
@@ -52,12 +57,15 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcrypt": "^5",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/lodash": "^4.17.1",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.15",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
     "@types/uuid": "^9.0.8",
@@ -100,5 +108,6 @@
     "coveragePathIgnorePatterns": [
       "/src/main.ts"
     ]
-  }
+  },
+  "packageManager": "yarn@4.3.1"
 }
