--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,4 @@ dist
 .yarn
 upgrade-interactive
 uploads
+client_secret_133358320192-0stj91r58o54jheirh16gh7nubtbpv7j.apps.googleusercontent.com.json
