--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
+    "@willsoto/nestjs-prometheus": "^6.0.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -46,6 +47,7 @@
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
@@ -107,7 +109,10 @@
     "testEnvironment": "node",
     "coveragePathIgnorePatterns": [
       "/src/main.ts"
-    ]
+    ],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/$1"
+    }
   },
   "packageManager": "yarn@4.3.1"
 }
