fixing the issues with login all

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,6 @@ dist
 upgrade-interactive
 uploads
 client_secret_133358320192-0stj91r58o54jheirh16gh7nubtbpv7j.apps.googleusercontent.com.json
+
+# Sentry Config File
+.sentryclirc
