--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "nest build && npm run sentry:sourcemaps",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.js"
+    "test:e2e": "jest --config ./test/jest-e2e.js",
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org bytegenie --project e-learning-api ./dist && sentry-cli sourcemaps upload --org bytegenie --project e-learning-api ./dist"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
@@ -30,6 +31,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
+    "@sentry/cli": "^2.42.2",
+    "@sentry/nestjs": "^9.5.0",
     "@willsoto/nestjs-prometheus": "^6.0.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
