improve the setup

--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,5 @@ client_secret_133358320192-0stj91r58o54jheirh16gh7nubtbpv7j.apps.googleuserconte
 
 # Sentry Config File
 .sentryclirc
+
+documentation
